--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,14 +12,14 @@
 
                 <li class="nav-item mr-2">
                     {% if request.user.profile.picture %}
-                        <a href="">
+                        <a href="{% url "accounts:detail" request.user.username %}">
                             <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
                         </a>    
                     {% else %}
                         <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
                     {% endif %}
-                    <a href="" style="color:inherit;text-decoration:inherit;" >
-                        <i class="lead">@TestUser</i>
+                    <a href="{% url "accounts:detail" request.user.username %}" style="color:inherit;text-decoration:inherit;" >
+                        <i class="lead">@{{request.user.username}}</i>
                     </a>
                 </li>
                 <li class="nav-item dropdown">
@@ -36,14 +36,15 @@
                 </li>
 
                 <li class="nav-item nav-icon">
-                    <a href="">
+                    <a href="{% url "accounts:logout" %}">
                         <i class="fas fa-sign-out-alt"></i>
                         <span class="d-sm-block d-md-none d-xl-none">Log Out</span>
                     </a>
                 </li>
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0" method="POST" action="/">
+              {% csrf_token %}
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
             </form>
