--- a/templates/accounts/detail.html
+++ b/templates/accounts/detail.html
@@ -9,7 +9,7 @@
     <div class="container mb-5" style="margin-top: 8em;">
         <div class="row">
             <div class="col-sm-4 d-flex justify-content-center">
-                <img src="{{ user.profile.picture.url }}" alt="@{{ user.username}}" class="rounded-circle" max-width="150px" height="150px" />
+                <img src="{{ user.profilehunter.picture.url }}" alt="@{{ user.username}}" class="rounded-circle" max-width="150px" height="150px" />
             </div>
             <div class="col-sm-8">
                 <h2 style="font-weight: 100;">
@@ -32,18 +32,18 @@
                 </h2>
                 <div class="row mt-2" style="font-size: 1.2em">
                     <div class="col-sm-4">
-                        <b>{{ user.profile.posts_count }}785</b> posts
+                        <b>{{ user.profilehunter.posts_count }}785</b> posts
                     </div>
                     <div class="col-sm-4">
-                        <b>{{ user.profile.followers }}1,401</b> followers
+                        <b>{{ user.profilehunter.followers }}1,401</b> followers
                     </div>
                     <div class="col-sm-4">
-                        <b>{{ user.profile.following }}491</b> following
+                        <b>{{ user.profilehunter.following }}491</b> following
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col-sm-12">
-                        <p>{{ user.profile.biography }}</p>
+                        <p>{{ user.profilehunter.biography }}</p>
                     </div>
                 </div>
             </div>
