--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,9 +11,9 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item mr-2">
-                    {% if request.user.profile.picture %}
+                    {% if request.user.profilehunter.picture %}
                         <a href="{% url "accounts:detail" request.user.username %}">
-                            <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
+                            <img src="{{ request.user.profilehunter.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
                         </a>    
                     {% else %}
                         <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
