todo funciona y agregamos el registro de los prey

--- a/templates/accounts/detail.html
+++ b/templates/accounts/detail.html
@@ -16,7 +16,7 @@
                     {{ user.username }}
                     {% if user == request.user %}
                         <a
-                            href="{% url "accounts:update_profile" %}"
+                            href="{% url "accounts:update_hunter_profile" %}"
                             class="ml-5 btn btn-sm btn-outline-info"
                         >
                             Edit profile
