--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -33,6 +33,7 @@
 		<button type="submit" class="btn btn-outline-info btn-block mt-5"><i class="lead">Sign in!</i></button>	
 	</form>
 	<div class="mx-auto mt-1" style="width: 300px;">
-		<p>Not registered? <a href="{% url "accounts:signup" %}">Create an account</a></p>
+		<p>Not registered? <a href="{% url "accounts:signuphunter" %}">Create an account like a hunter</a></p>
+		<p>Not registered? <a href="{% url "accounts:signupprey" %}">Create an account like a prey</a></p>
 	</div>
 {% endblock container %}
