Add text on detail

--- a/templates/accounts/detail.html
+++ b/templates/accounts/detail.html
@@ -55,4 +55,14 @@
         </div>
     </div>
     <hr>
+    {% load static %}
+    <div class="jumbotron" style="background: url();">
+      <h1 class="display-5">Vuelvete <b>Premium</b> ahora!</h1>
+      <p class="lead">Logra posicionamiento, estadisticas y valoraciones con la versión <i>premium</i>. por solo <i>$9.990</i> al mes</p>
+      <hr class="my-4">
+      <p>*Camello no se hace responsable que intenten fraude desde la applicacion*.</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Suscribete Ahora!</a>
+      </p>
+    </div>
 {% endblock %}
