--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,8 +1,8 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg fixed-top navbar-light" id="main-navbar">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light fixed -top" id="main-navbar">
     <div class="container">
         <a class="navbar-brand pr-5" style="border-right: 1px solid #efefef;" href="">
-            <img src="{% static "img/aleph.png" %}" height="45" class="d-inline-block align-top"/>
+            <img src="{% static 'img/match.png' %}" alt="" height="60" width="60px"> 
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
