Add minor change

--- a/templates/accounts/detail.html
+++ b/templates/accounts/detail.html
@@ -62,7 +62,7 @@
       <hr class="my-4">
       <p>*Camello no se hace responsable que intenten fraude desde la applicacion*.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Suscribete Ahora!</a>
+        <a class="btn btn-primary btn-lg" href="" role="button">Suscribete Ahora!</a>
       </p>
     </div>
 {% endblock %}
