Add files for api

--- a/templates/accounts/detail.html
+++ b/templates/accounts/detail.html
@@ -62,7 +62,7 @@
       <hr class="my-4">
       <p>*Camello no se hace responsable que intenten fraude desde la applicacion*.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="" role="button">Suscribete Ahora!</a>
+        <a class="btn btn-primary btn-lg" href="https://sbapi.bancolombia.com/security/oauth-otp/oauth2/authorize?response_type=code&scope=Payments-order:write:app&redirect_uri=http://localhost:8000/accounts/access-token&client_id=38f00d7d-7d1b-4a00-9df0-05e99381a892" role="button">Suscribete Ahora!</a>
       </p>
     </div>
 {% endblock %}
