--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% extends "accounts/base.html" %}
 
 {% block head_content %}
-    <title>Login | Aleph</title>
+    <title>Login | Camello</title>
 {% endblock head_content %}
 
 {% block container %}
@@ -30,10 +30,9 @@
 			<input type="password" class="form-control" placeholder="Password" name="password">
 		</div>
 
-		<button type="submit" class="btn btn-outline-info btn-block mt-5"><i class="lead">Sign in!</i></button>	
+		<button type="submit" class="btn btn-outline-info btn-block mt-5"><i class="lead">Ingresa!</i></button>	
 	</form>
 	<div class="mx-auto mt-1" style="width: 300px;">
-		<p>Not registered? <a href="{% url "accounts:signuphunter" %}">Create an account like a hunter</a></p>
-		<p>Not registered? <a href="{% url "accounts:signupprey" %}">Create an account like a prey</a></p>
+		<p>Not registered? <a href="{% url "accounts:signuphunter" %}">Create an account like a hunter</a> or <a href="{% url "accounts:signupprey" %}">Create an account like a prey</a></p>
 	</div>
 {% endblock container %}
