--- a/templates/accounts/base.html
+++ b/templates/accounts/base.html
@@ -7,8 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/match.png' %}">
 
 </head>
 <body class="h-100">
@@ -17,9 +16,10 @@
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-5 pt-2 pl-5 pr-5 pb-5 border-info rounded" id="auth-container">
 
-                <img src="{% static "img/aleph.png" %}" class="img-fluid rounded mt-2 mx-auto d-block pb-4" style="max-width: 60%;">
-
-                {% block container %}{% endblock%}
+                <img src="{% static "img/match.png" %}" class="img-fluid rounded mt-2 mx-auto d-block pb-4" style="max-width: 60%;">
+                <h3 class="text-center">Camello</h3>
+                {% block container %}
+                {% endblock%}
 
             </div>
         </div>
