--- a/templates/home.html
+++ b/templates/home.html
@@ -30,8 +30,10 @@
 
   <body id="page-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <!-- Navigation -->  
+      {% include 'nav.html' %}
+
+<!--    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="{% static 'img/match.png' %}" alt="" height="60" width="60px"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +46,7 @@
         </div>
       </div>
     </nav>
-
+-->
     <header class="masthead text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
@@ -54,12 +56,21 @@
             </h1>
             <hr>
           </div>
-
+          
           <div class="col-lg-8 mx-auto">
             <div class="row">
               <div class="col-sm text-center">
-                <a class="btn btn-primary btn-xl js-scroll-trigger ml-4" href="{% url "accounts:update_prey_profile" %}">¡Quiero Trabajar!</a>
-                <a class="btn btn-primary btn-xl js-scroll-trigger ml-3" href="{% url "accounts:update_hunter_profile" %}">¡Quiero Contratar!</a>
+                {% if user.is_anonymous %}
+                    
+                  <a class="btn btn-primary btn-xl js-scroll-trigger ml-4" href="{% url "accounts:update_prey_profile" %}">¡Quiero Trabajar!</a>
+                  <a class="btn btn-primary btn-xl js-scroll-trigger ml-3" href="{% url "accounts:update_hunter_profile" %}">¡Quiero Contratar!</a>
+                {% endif %}
+                {% if user.profileprey %}
+                  <a class="btn btn-primary btn-xl js-scroll-trigger ml-3" href="{% url "vacancies:feed" %}">¡Quiero Trabajar!</a>
+                {% endif %}
+                {% if user.profilehunter %}
+                  <a class="btn btn-primary btn-xl js-scroll-trigger ml-3" href="{% url "home" %}">¡Quiero Contratar!</a>
+                {% endif %}
               </div>
                 
             </div>
