--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
                   <a class="btn btn-primary btn-xl js-scroll-trigger ml-3" href="{% url "vacancies:feed" %}">¡Quiero Trabajar!</a>
                 {% endif %}
                 {% if user.profilehunter %}
-                  <a class="btn btn-primary btn-xl js-scroll-trigger ml-3" href="{% url "home" %}">¡Quiero Contratar!</a>
+                  <a class="btn btn-primary btn-xl js-scroll-trigger ml-3" href="{% url "vacancies:feed" %}">¡Quiero Contratar!</a>
                 {% endif %}
               </div>
                 
